[package]
name = "web2img"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
headless_chrome = { git = "https://github.com/atroche/rust-headless-chrome", tag = "v1.0.0" }
qrcode = "0.12"
image = "0.23"
clap = { version = "3.2.22", features = ["derive"] }
url = "2.2.2"